--- a/dotnetConf2024/Client/Pages/Home/PricingSection.razor
+++ b/dotnetConf2024/Client/Pages/Home/PricingSection.razor
@@ -15,7 +15,7 @@
                     <h4>早鳥票</h4>
                     <div class="pi-price">
                         @* <h2><span>$</span>1,600</h2> *@
-                        <h4>Comming Soon</h4>
+                        <h4>Coming Soon</h4>
                     </div>
                     <ul>
                         <li>12/14 -15 社群技術議程</li>
@@ -34,7 +34,7 @@
                     <h4>限量盲鳥</h4>
                     <div class="pi-price">
                         @* <h2><span>$</span>1,300</h2> *@
-                        <h4>Comming Soon</h4>
+                        <h4>Coming Soon</h4>
                     </div>
                     <ul>
                         <li>12/14 -15 社群技術議程</li>
@@ -50,7 +50,7 @@
                     <h4>熱血票</h4>
                     <div class="pi-price">
                         @* <h2><span>$</span>2,000</h2> *@
-                        <h4>Comming Soon</h4>
+                        <h4>Coming Soon</h4>
                     </div>
                     <ul>
                         <li>12/14 -15 社群技術議程</li>
@@ -66,12 +66,12 @@
                     <h4>回放票</h4>
                     <div class="pi-price">
                         @* <h2><span>$</span>1,300</h2> *@
-                        <h4>Comming Soon</h4>
+                        <h4>Coming Soon</h4>
                     </div>
                     <ul>
-                        <li>12/14 -15 社群技術議程</li>
                         <li>時光倒流，回放議程</li>
-                        <li>各種豐富技術議程，讓你完成進化</li>
+                        <li>回放權益，7 日有效！</li>
+                        <li>精神時光屋，修行從這裡開始</li>
                     </ul>
                     <a href="https://study4-tw.kktix.cc/events/dotnetConf2024" target="_blank" class="price-btn">立即購票<span class="arrow_right"></span></a>
                 </div>
