--- a/dotnetConf2024/Client/Pages/Home/Home.razor
+++ b/dotnetConf2024/Client/Pages/Home/Home.razor
@@ -2,7 +2,7 @@
 @page "/Home"
 @inject IJSRuntime JSRuntime
 <!-- Hero Section Begin -->
-<section class="hero-section" style="background-image: url('./img/hero.png');background-size: cover;">
+<section class="hero-section" style="background-image: url('./img/hero.jpg');background-size: cover;">
     <div class="container">
         <div class="row">
             <div class="col-lg-7">
@@ -26,7 +26,7 @@
 <AboutSection></AboutSection>
 <SpeakerSection></SpeakerSection>
 @*<ScheduleSection></ScheduleSection>*@
-<PricingSection></PricingSection>
+@* <PricingSection></PricingSection> *@
 <ContactSection></ContactSection>
 
 @code {
