--- a/dotnetConf2024/Client/Pages/Home/PricingSection.razor
+++ b/dotnetConf2024/Client/Pages/Home/PricingSection.razor
@@ -17,13 +17,12 @@
                     </div>
                     <h4>限量盲鳥</h4>
                     <div class="pi-price">
-                        @* <h2><span>$</span>1,300</h2> *@
-                        <h4>Coming Soon</h4>
+                        <h2><span>$</span>1,300</h2>
                     </div>
                     <ul>
                         <li>12/14 -15 社群技術議程</li>
                         <li>線下議程，熱血支持</li>
-                        <li>回放權益，7 日有效！</li>
+                        <li>回放權益，看到過年</li>
                         <li>數量有限，售完為止</li>
                     </ul>
                     <a href="https://study4-tw.kktix.cc/events/dotnetConf2024" target="_blank" class="price-btn">立即報名<span class="arrow_right"></span></a>
@@ -33,13 +32,12 @@
                 <div class="price-item">
                     <h4>早鳥票</h4>
                     <div class="pi-price">
-                        @* <h2><span>$</span>1,600</h2> *@
-                        <h4>Coming Soon</h4>
+                        <h2><span>$</span>1,600</h2>
                     </div>
                     <ul>
                         <li>12/14 -15 社群技術議程</li>
                         <li>線下議程，熱血支持！</li>
-                        <li>回放權益，7 日有效！</li>
+                        <li>回放權益，看到過年</li>
                         <li>滿滿技術乾貨，打敗 AI 指日可待</li>
                     </ul>
                     <a href="https://study4-tw.kktix.cc/events/dotnetConf2024" target="_blank" class="price-btn">立即購票<span class="arrow_right"></span></a>
@@ -49,13 +47,12 @@
                 <div class="price-item">
                     <h4>熱血票</h4>
                     <div class="pi-price">
-                        @* <h2><span>$</span>2,000</h2> *@
-                        <h4>Coming Soon</h4>
+                        <h2><span>$</span>2,000</h2>
                     </div>
                     <ul>
                         <li>12/14 -15 社群技術議程</li>
                         <li>線下議程，熱血支持</li>
-                        <li>回放權益，7 日有效！</li>
+                        <li>回放權益，看到過年</li>
                         <li>各種豐富技術議程，讓你完成進化</li>
                     </ul>
                     <a href="https://study4-tw.kktix.cc/events/dotnetConf2024" target="_blank" class="price-btn">立即購票<span class="arrow_right"></span></a>
@@ -65,12 +62,11 @@
                 <div class="price-item">
                     <h4>回放票</h4>
                     <div class="pi-price">
-                        @* <h2><span>$</span>1,300</h2> *@
-                        <h4>Coming Soon</h4>
+                        <h2><span>$</span>1,300</h2>
                     </div>
                     <ul>
                         <li>時光倒流，回放議程</li>
-                        <li>回放權益，7 日有效！</li>
+                        <li>回放權益，看到過年</li>
                         <li>精神時光屋，修行從這裡開始</li>
                     </ul>
                     <a href="https://study4-tw.kktix.cc/events/dotnetConf2024" target="_blank" class="price-btn">立即購票<span class="arrow_right"></span></a>
