--- a/dotnetConf2024/Client/Pages/Home/Home.razor
+++ b/dotnetConf2024/Client/Pages/Home/Home.razor
@@ -26,7 +26,7 @@
 <AboutSection></AboutSection>
 <SpeakerSection></SpeakerSection>
 @*<ScheduleSection></ScheduleSection>*@
-@* <PricingSection></PricingSection> *@
+<PricingSection></PricingSection>
 <ContactSection></ContactSection>
 
 @code {
