--- a/dotnetConf2024/Client/Pages/Organizers/Organizer.razor
+++ b/dotnetConf2024/Client/Pages/Organizers/Organizer.razor
@@ -115,7 +115,7 @@
                 </div>
             </div>
         </div> *@
-        @* <br />
+        <br />
         <br />
         <div class="row">
             <div class="col-lg-6">
@@ -126,10 +126,9 @@
             <div class="col-lg-6">
                 <div class="ha-text">
                     <h2>TSMC</h2>
-                    <h2>台灣積體電路製造股份有限公司</h2>
+                    <h2>TSMC 台灣積體電路製造股份有限公司</h2>
                     <p>
-                        台積公司是世界領先的專業積體電路製造服務公司，背後關鍵秘訣是：Fab runs on code ── 跑在程式碼上的晶圓廠。台積IT是半導體前瞻製程的重要支援夥伴，產品藍圖涵蓋資通訊建構、AI
-                        應用、技術系統及企業系統，服務的使用者來自工廠、企業員工及合作夥伴。我們匯聚全球頂尖人才，打造雲原生和數位轉型。
+                        台積公司是世界領先的專業積體電路製造服務公司，背後關鍵秘訣是：Fab runs on code ── 跑在程式碼上的晶圓廠。台積IT是半導體前瞻製程的重要支援夥伴，產品藍圖涵蓋資通訊建構、AI 應用、技術系統及企業系統，服務的使用者來自工廠、企業員工及合作夥伴。我們匯聚全球頂尖人才，打造雲原生和數位卓越。Change is happening. Join us now!
                     </p>
                     <p>
                         Change is happening. Join us now!
@@ -140,7 +139,7 @@
                     </p>
                 </div>
             </div>
-        </div> *@
+        </div>
         @* <br />
         <br />
         <div class="row">
