--- a/dotnetConf2024/Client/Pages/Organizers/Organizer.razor
+++ b/dotnetConf2024/Client/Pages/Organizers/Organizer.razor
@@ -140,6 +140,25 @@
                 </div>
             </div>
         </div>
+        <br />
+        <br />
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="ha-pic">
+                    <img src="./img/sponsors/HouseFun-logo.svg" width="500" alt="成功國際攝影">
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="ha-text">
+                    <h2>好房網 HouseFun</h2>
+                    @* <p>TBD</p> *@
+                    <p>
+                        <a href="https://www.housefun.com.tw/" target="_blank"
+                            class="ha-btn">https://www.housefun.com.tw/</a>
+                    </p>
+                </div>
+            </div>
+        </div>
         @* <br />
         <br />
         <div class="row">
