--- a/dotnetConf2024/Client/Pages/Organizers/Organizer.razor
+++ b/dotnetConf2024/Client/Pages/Organizers/Organizer.razor
@@ -144,7 +144,7 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="ha-pic">
-                    <img src="./img/sponsors/HouseFun-logo.svg" width="500" alt="成功國際攝影">
+                    <img src="./img/sponsors/HouseFun-logo.svg" width="500" alt="好房網 HouseFun">
                 </div>
             </div>
             <div class="col-lg-6">
