--- a/dotnetConf2024/Client/Pages/Organizers/Organizer.razor
+++ b/dotnetConf2024/Client/Pages/Organizers/Organizer.razor
@@ -150,7 +150,12 @@
             <div class="col-lg-6">
                 <div class="ha-text">
                     <h2>好房網 HouseFun</h2>
-                    @* <p>TBD</p> *@
+                    <p>
+                        好房網（HouseFun）是一個完整的房地產資訊平台，提供買屋、租屋、社區生活、新建案以及實價登錄等多元服務。 不僅整合最新房地產市場動態與新聞，更提供房地產知識講座，為有意購屋、租屋或投資房地產的使用者，提供專業且實用的居住資訊，協助他們在房地產交易過程中做出最適合的選擇。
+                    </p>
+                    <p>
+                        加入好房網，與我們一同打造台灣最值得信賴的房地產資訊平台！我們重視創新思維，歡迎充滿熱情的你加入團隊，在數位科技與房地產的交會處，開創美好的居住體驗。
+                    </p>
                     <p>
                         <a href="https://www.housefun.com.tw/" target="_blank"
                             class="ha-btn">https://www.housefun.com.tw/</a>
