移除 ha-text 避免 padding-top

--- a/dotnetConf2024/Client/Pages/Organizers/Organizer.razor
+++ b/dotnetConf2024/Client/Pages/Organizers/Organizer.razor
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <div class="ha-text">
+                <div>
                     <h2>STUDY4</h2>
                     <p>
                         STUDY4 是成立超過 10 年的技術社群，有很喜歡搞 DB 的
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <div class="ha-text">
+                <div>
                     <h2>Build School</h2>
                     <p>
                         Build School 是最酷的軟體工程與IT專業培訓學校，幫助想搭上軟體及網路經濟的學員們，打造更有競爭力的職涯；透過身經百戰的實務講師、企業資深工程師或 CTO，帶領學員實作真正能運作的產品，解決真實世界的問題，成為專業的軟體工程師。
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <div class="ha-text">
+                <div>
                     <h2>Microsoft 台灣微軟</h2>
                     <p>
                         微軟是全球科技產業的領航者，提供全球領先的軟體、服務、設備和解決方案，自 1975 年成立以來，一直致力於幫助個人和企業用戶，全面發揮科技潛能，實現夢想。
@@ -124,7 +124,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <div class="ha-text">
+                <div>
                     <h2>TSMC 台灣積體電路製造股份有限公司</h2>
                     <p>
                         台積公司是世界領先的專業積體電路製造服務公司，背後關鍵秘訣是：Fab runs on code ── 跑在程式碼上的晶圓廠。台積IT是半導體前瞻製程的重要支援夥伴，產品藍圖涵蓋資通訊建構、AI 應用、技術系統及企業系統，服務的使用者來自工廠、企業員工及合作夥伴。我們匯聚全球頂尖人才，打造雲原生和數位卓越。Change is happening. Join us now!
@@ -148,7 +148,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <div class="ha-text">
+                <div>
                     <h2>好房網 HouseFun</h2>
                     <p>
                         好房網（HouseFun）是一個完整的房地產資訊平台，提供買屋、租屋、社區生活、新建案以及實價登錄等多元服務。 不僅整合最新房地產市場動態與新聞，更提供房地產知識講座，為有意購屋、租屋或投資房地產的使用者，提供專業且實用的居住資訊，協助他們在房地產交易過程中做出最適合的選擇。
@@ -172,7 +172,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <div class="ha-text">
+                <div>
                     <h2>成功國際攝影</h2>
                     <p>
                         成功國際攝影專注於直播、導播、多地轉播技術，深耕台灣、中國兩岸三地拍攝，從簡單的研討會攝影、花絮拍攝，到困難的多地直播轉播都是我們的強項，專門承接各企業具有挑戰性的任務，攝影棚使用 1G
@@ -198,7 +198,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <div class="ha-text">
+                <div>
                     <h2>HackMD</h2>
                     <p>
                         HackMD 是以 Markdown 為本，追求流暢、簡潔的線上協作筆記。無論是社群多人編輯、團隊溝通共筆、個人便捷紀錄，HackMD
@@ -223,7 +223,7 @@
         </div>
         </div>
         <div class="col-lg-3">
-        <div class="ha-text">
+        <div>
         <h2>HackMD</h2>
         <p>
         HackMD 是以 Markdown 為本，追求流暢、簡潔的線上協作筆記。無論是社群多人編輯、團隊溝通共筆、個人便捷紀錄，HackMD
@@ -244,7 +244,7 @@
         </div>
         </div>
         <div class="col-lg-3">
-        <div class="ha-text">
+        <div>
         <h2>iThome</h2>
         <p>
         iThome電腦報周刊是臺灣資訊類雜誌中發行量最大的 IT 雜誌，長期報導企業資訊應用、IT 管理、資訊產品與技術發展。主要讀者群為企業中的 CIO、IT/MIS 人員、App 或軟體開發從業人員、CEO 等。旗下網站包括
