--- a/dotnetConf2024/Client/Pages/Organizers/Organizer.razor
+++ b/dotnetConf2024/Client/Pages/Organizers/Organizer.razor
@@ -163,6 +163,30 @@
                 </div>
             </div>
         </div>
+        <br />
+        <br />
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="ha-pic">
+                    <img src="./img/sponsors/jkopay-logo.jpg" width="500" alt="街口電子支付 JKOPay">
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div>
+                    <h2>街口電子支付 JKOPay</h2>
+                    <p>
+                        街口支付是台灣領先的電子支付業者，至今為超過650萬用戶提供支付、轉帳、儲值、繳費、公益捐款等便利功能，持續打造新型態金融生態圈 JKO Fintech Hub。同時，我們也是台灣首家實現境外支付的電子支付機構，在日本擁有上百萬通路據點。
+                    </p>
+                    <p>
+                        我們不斷致力於提供卓越的服務體驗，為了讓所有人都能方便地享受到更好的金融服務。誠邀積極、熱情、勇於挑戰的你加入，共同創造未來！
+                    </p>
+                    <p>
+                        <a href="https://www.jkopay.com/application" target="_blank"
+                            class="ha-btn">https://www.jkopay.com/application</a>
+                    </p>
+                </div>
+            </div>
+        </div>
         @* <br />
         <br />
         <div class="row">
