--- a/dotnetConf2024/Client/Pages/Organizers/Organizer.razor
+++ b/dotnetConf2024/Client/Pages/Organizers/Organizer.razor
@@ -187,6 +187,33 @@
                 </div>
             </div>
         </div>
+        <br />
+        <br />
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="ha-pic">
+                    <img src="./img/sponsors/titansoft-logo.svg" width="500" alt="新加坡商鈦坦科技">
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div>
+                    <h2>新加坡商鈦坦科技</h2>
+                    <p>
+                        鈦坦在台北、台中、高雄都有辦公室，而三地最大的共同點，就是舒適開放的大空間，以及擺放著各式酒類的吧檯。我們相信員工都是「成年人」，只要能夠將事情做好做完，想喝酒、玩桌遊、打電動都是沒有問題的，只要你瞭解，要享受「自由」前，必須先「自律」！
+                    </p>
+                    <p>
+                        我們的工作模式，就事論事，對事不對人，學歷經歷都不重要，有貢獻就有回饋，我們擁抱改變，並隨機應變。
+                    </p>
+                    <p>
+                        <a href="https://gotica.io/鈦坦大小事/.NET" target="_blank" class="ha-btn">官方網站</a>
+                        <a href="https://gotica.io/鈦坦粉專/.NET" target="_blank" class="ha-btn">Facebook</a>
+                        <a href="https://gotica.io/Titaner/.NET" target="_blank" class="ha-btn">Instagram</a>
+                        <a href="https://gotica.io/鈦坦影院/.NET" target="_blank" class="ha-btn">YouTube</a>
+                        <a href="https://gotica.io/Career/.NET" target="_blank" class="ha-btn">LinkedIn</a>
+                    </p>
+                </div>
+            </div>
+        </div>
         @* <br />
         <br />
         <div class="row">
