--- a/dotnetConf2024/Client/Pages/Organizers/Organizer.razor
+++ b/dotnetConf2024/Client/Pages/Organizers/Organizer.razor
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <div>
+                <div class="ha-text">
                     <h2>STUDY4</h2>
                     <p>
                         STUDY4 是成立超過 10 年的技術社群，有很喜歡搞 DB 的
@@ -124,7 +124,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <div>
+                <div class="ha-text">
                     <h2>TSMC 台灣積體電路製造股份有限公司</h2>
                     <p>
                         台積公司是世界領先的專業積體電路製造服務公司，背後關鍵秘訣是：Fab runs on code ── 跑在程式碼上的晶圓廠。台積IT是半導體前瞻製程的重要支援夥伴，產品藍圖涵蓋資通訊建構、AI 應用、技術系統及企業系統，服務的使用者來自工廠、企業員工及合作夥伴。我們匯聚全球頂尖人才，打造雲原生和數位卓越。Change is happening. Join us now!
@@ -148,7 +148,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <div>
+                <div class="ha-text">
                     <h2>好房網 HouseFun</h2>
                     <p>
                         好房網（HouseFun）是一個完整的房地產資訊平台，提供買屋、租屋、社區生活、新建案以及實價登錄等多元服務。 不僅整合最新房地產市場動態與新聞，更提供房地產知識講座，為有意購屋、租屋或投資房地產的使用者，提供專業且實用的居住資訊，協助他們在房地產交易過程中做出最適合的選擇。
@@ -172,7 +172,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <div>
+                <div class="ha-text">
                     <h2>街口電子支付 JKOPay</h2>
                     <p>
                         街口支付是台灣領先的電子支付業者，至今為超過650萬用戶提供支付、轉帳、儲值、繳費、公益捐款等便利功能，持續打造新型態金融生態圈 JKO Fintech Hub。同時，我們也是台灣首家實現境外支付的電子支付機構，在日本擁有上百萬通路據點。
@@ -196,7 +196,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <div>
+                <div class="ha-text">
                     <h2>新加坡商鈦坦科技</h2>
                     <p>
                         鈦坦在台北、台中、高雄都有辦公室，而三地最大的共同點，就是舒適開放的大空間，以及擺放著各式酒類的吧檯。我們相信員工都是「成年人」，只要能夠將事情做好做完，想喝酒、玩桌遊、打電動都是沒有問題的，只要你瞭解，要享受「自由」前，必須先「自律」！
