--- a/dotnetConf2024/Client/Pages/Organizers/Organizer.razor
+++ b/dotnetConf2024/Client/Pages/Organizers/Organizer.razor
@@ -214,6 +214,29 @@
                 </div>
             </div>
         </div>
+        <br />
+        <br />
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="ha-pic">
+                    <img src="./img/sponsors/sinyi-group-logo.jpg" width="500" alt="信義企業集團">
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="ha-text">
+                    <h2>信義企業集團</h2>
+                    <p>
+                        信義企業集團是 ESG 先行者、也是 PropTech 房地產科技的實踐家。以信義房屋為起點，信義將不動產與居住生活服務範疇垂直化經營策略，發展出六大事業群(台灣核心事業、台灣關係事業、中國信義事業、開發事業、海外事業、文化公益事業)。這裡匯聚了超過 40 年的集團產業資源以及多元化的人才，我們希望讓居住在這片土地上的人們，在「不動產交易買賣」與「居住生活日常」有更好的保障與體驗。
+                    </p>
+                    <p>
+                        接下來：期待你與我們一起，加速這個改變、創造超乎想像的體驗、成就即將到來的未來！
+                    </p>
+                    <p>
+                        <a href="https://www.sinyi.com.tw" target="_blank" class="ha-btn">https://www.sinyi.com.tw</a>
+                    </p>
+                </div>
+            </div>
+        </div>
         @* <br />
         <br />
         <div class="row">
