--- a/dotnetConf2024/Client/Pages/Organizers/Organizer.razor
+++ b/dotnetConf2024/Client/Pages/Organizers/Organizer.razor
@@ -232,7 +232,10 @@
                         接下來：期待你與我們一起，加速這個改變、創造超乎想像的體驗、成就即將到來的未來！
                     </p>
                     <p>
-                        <a href="https://www.sinyi.com.tw" target="_blank" class="ha-btn">https://www.sinyi.com.tw</a>
+                        <a href="https://www.sinyi.com.tw/" target="_blank" class="ha-btn">信義官網</a>
+                        <a href="https://hr.sinyi.com.tw/proptech/" target="_blank" class="ha-btn">PropTech 人才招募計畫</a>
+                        <a href="https://www.facebook.com/SinyiRealtyInc.HR/" target="_blank" class="ha-btn">Facebook</a>
+                        <a href="https://www.instagram.com/sinyi.hr/" target="_blank" class="ha-btn">Instagram</a>
                     </p>
                 </div>
             </div>
